# rusty-foil

./: Cargo.toml  README.md
examples/bongard/: data.tql  schema.tql
src/: clause.rs  language.rs  lib.rs  main.rs  task.rs
src/foil/: mod.rs  task.rs
src/tasks/: foil.rs  mod.rs
src/tilde/: classification.rs  mod.rs  tilde.rs  tree.rs
tests/: README.md  e2e_tests.rs  integration_test.rs
